--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-install: pip install tox
-script: tox
+install:
+  pip install pipenv && pipenv install --dev
+script:
+  pipenv run flake8 setup.py briscas tests && pipenv run py.test tests
