--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python:
   - "3.5"
   - "3.6"
 install:
-  pip install pipenv && pipenv install --dev
+  - pip install pipenv
+  - pipenv install --dev
 script:
-  pipenv run flake8 setup.py briscas tests && pipenv run py.test tests
+  - pipenv run flake8 setup.py briscas tests
+  - pipenv run coverage run --source briscas -m py.test tests
+  - pipenv run codecov
